Make sure that 100vw doesn't include the vertical scrollbar

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,4 +5,5 @@
   justify-content: flex-start;
   height: 100vh;
   width: 100vw;
+  max-width: 100%;
 }
